<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAmt" />

    <EditText
        android:id="@+id/etAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvNOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNOP" />

    <EditText
        android:id="@+id/etNOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSVS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="NO SVS"
            android:textOn="SVS" />

        <ToggleButton
            android:id="@+id/tbGST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="NO GST"
            android:textOn="GST" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvDst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDst" />

    <EditText
        android:id="@+id/etDst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/rgPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCash" />

        <RadioButton
            android:id="@+id/rbPN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPN" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSplit" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnReset" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvResult1" />

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvResult2" />
</LinearLayout>